--- a/index.html
+++ b/index.html
@@ -142,17 +142,18 @@
                         <li><a href="pages/dom/changing-attributes.html">Changing attributes</a></li>
                         <li><a href="pages/dom/changing-css.html">Changing CSS</a></li>
                         <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
-
                         <li>
+                        </ul>
 
-                            <h5>Events</h5></li>
+                        <h4>Events</h4>
+                      <ul></li>
                         <li><a href="pages/events/events.html">Events</a></li>
                         <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
                         <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
                         <li><a href="pages/events/stopping-an-event.html">Stopping an Event</a></li>
-
                     </ul>
-                </ul>
+
+              </ul>
             </nav>
 
 
@@ -224,30 +225,80 @@
 
 
 
+            <p class="toc-heading1">Advanced</p>
+            <p class="toc-heading2">Storage</p>
+
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="pages/advanced/storage.html">Browser Storage</a></li>
+
+                </ul>
+            </ul>
 
 
-            <p class="toc-heading1">Project examples</p>
+
+
+            <p class="toc-heading1">Examples (small)</p>
+            <h3>Events</h3>
+
+          <ul></li>
+            <li><a href="examples/events/print-searchbox-text-to-console.html">Print searchbox text to console</a></li>
+            <li><a href="examples/events/remove-element-on-button-click.html">Remove element on button click</a></li>
+            <li><a href="examples/events/change-text-of-button-when-clicked.html">Change text of button when clicked</a></li>
+
+          </ul>
+
+
+
+
+            <p class="toc-heading1">Examples (projects)</p>
             <h3>Expense Tracker</h3>
             <ul>
                 <li><a href="projects/expense-tracker/expense-tracker.html">JS only expense tracker</a></li>
             </ul>
 
+
+
+
+
             <h3>Live Text Filter</h3>
             <ul>
-                <li><a href="projects/live-filter-text/live-filter-text.html">Live Text Filter</a></li>
+                <li><a href="projects/live-filter-text/live-filter-text.html">#1 - Live Text Filter</a></li>
+                <li><a href="projects/live-filter-text/live-filter-text.html">#2 - Live Text Filter and display # of remaining Todos</a></li>
             </ul>
 
+
+
+
+
+
+
             <h3>Notes App</h3>
+
             <h4>Basic functionality</h4>
             <ul>
-                <li><a href="projects/note-taking-app/1_notes-app/index.html">Note taking app (basic functionality)</a></li>
+
                 <li><a href="projects/note-taking-app/1_todo-app/project.html">Todo app (basic functionality)</a></li>
             </ul>
             <h4>Added functionality</h4>
             <ul>
                 <li><a href="projects/note-taking-app/2_notes-app/index.html">Note taking app (added functionality)</a></li>
-                <li><a href="projects/note-taking-app/2_todo-app/index.html">Todo app (added functionality)</a></li>
+                <li><a href="projects/note-taking-app/2_todo-app/index.html">Todo app (added functionality to add new note)</a></li>
             </ul>
+
+            <h4>Added checkbox</h4>
+            <ul>
+                <li><a href="projects/note-taking-app/3_notes-app/index.html">Note taking app (added checkbox)</a></li>
+                <li><a href="projects/note-taking-app/3_todo-app/index.html">Todo app (added checkbox)</a></li>
+            </ul>
+
+            <h4>Added checkbox</h4>
+            <ul>
+                <li><a href="projects/note-taking-app/4_notes-app/index.html">Note taking app (added dropdown)</a></li>
+
+            </ul>
+
 
 
 
