More cleaning up and organizing

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
             <li><a href="examples/events/print-searchbox-text-to-console.html">Print searchbox text to console</a></li>
             <li><a href="examples/events/remove-element-on-button-click.html">Remove element on button click</a></li>
             <li><a href="examples/events/change-text-of-button-when-clicked.html">Change text of button when clicked</a></li>
+            <li><a href="examples/events/clear-form-field-when-submit-is-clicked.html">Clear form field when submit is clicked</a></li>
 
           </ul>
 
@@ -264,8 +265,7 @@
 
             <h3>Live Text Filter</h3>
             <ul>
-                <li><a href="projects/live-filter-text/live-filter-text.html">#1 - Live Text Filter</a></li>
-                <li><a href="projects/live-filter-text/live-filter-text.html">#2 - Live Text Filter and display # of remaining Todos</a></li>
+                <li><a href="projects/live-filter-text/live-filter-text.html">Live Text Filter and display # of remaining Todos</a></li>
             </ul>
 
 
@@ -276,11 +276,6 @@
 
             <h3>Notes App</h3>
 
-            <h4>Basic functionality</h4>
-            <ul>
-
-                <li><a href="projects/note-taking-app/1_todo-app/project.html">Todo app (basic functionality)</a></li>
-            </ul>
             <h4>Added functionality</h4>
             <ul>
                 <li><a href="projects/note-taking-app/2_notes-app/index.html">Note taking app (added functionality)</a></li>
