--- a/projects/note-taking-app/2_todo-app/index.html
+++ b/projects/note-taking-app/2_todo-app/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
 
 <head>
@@ -170,3 +169,19 @@ document.querySelector('#new-todo').addEventListener('submit', function (e) {
 </body>
 
 </html>
+
+    © 2019 GitHub, Inc.
+    Terms
+    Privacy
+    Security
+    Status
+    Help
+
+    Contact GitHub
+    Pricing
+    API
+    Training
+    Blog
+    About
+
+Press h to open a hovercard with more details.
