Refined all examples

--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@
             <li><a href="examples/events/remove-element-on-button-click.html">Remove element on button click</a></li>
             <li><a href="examples/events/change-text-of-button-when-clicked.html">Change text of button when clicked</a></li>
             <li><a href="examples/events/clear-form-field-when-submit-is-clicked.html">Clear form field when submit is clicked</a></li>
+            <li><a href="examples/events/checkbox.html">Checkbox marks in JS as TRUE or FALSE</a></li>
+            <li><a href="examples/events/dropdown.html">Check dropdown option</a></li>
 
           </ul>
 
@@ -263,36 +265,11 @@
 
 
 
-            <h3>Live Text Filter</h3>
+            <h3>Note taking and Filter app</h3>
             <ul>
                 <li><a href="projects/live-filter-text/live-filter-text.html">Live Text Filter and display # of remaining Todos</a></li>
             </ul>
 
-
-
-
-
-
-
-            <h3>Notes App</h3>
-
-            <h4>Added functionality</h4>
-            <ul>
-                <li><a href="projects/note-taking-app/2_notes-app/index.html">Note taking app (added functionality)</a></li>
-                <li><a href="projects/note-taking-app/2_todo-app/index.html">Todo app (added functionality to add new note)</a></li>
-            </ul>
-
-            <h4>Added checkbox</h4>
-            <ul>
-                <li><a href="projects/note-taking-app/3_notes-app/index.html">Note taking app (added checkbox)</a></li>
-                <li><a href="projects/note-taking-app/3_todo-app/index.html">Todo app (added checkbox)</a></li>
-            </ul>
-
-            <h4>Added checkbox</h4>
-            <ul>
-                <li><a href="projects/note-taking-app/4_notes-app/index.html">Note taking app (added dropdown)</a></li>
-
-            </ul>
 
 
 
