--- a/examples/asdf.html
+++ b/examples/asdf.html
@@ -14,81 +14,62 @@
 </head>
 
 <body>
-    <a href="../../../index.html">Home page</a>
+    <a href="../index.html">Home page</a>
+
 
     <section class="container">
+        <h1>Example</h1>
         <div class="row">
             <div class="col">
+                <p>This filters the list of Array Object 'title' properties.</p>
+            </div>
+        </div>
+        <h4>Example</h4>
+        <div class="row">
+            <div class="col">
+                <input id="search-text" type="text" placeholder="search for text">
 
-                <h1>Todos</h1>
-                <input id="new-todo-text" type="text" placeholder="Enter something to do">
-                <button id="add-todo">Add Todo</button>
-                <input id="search-text" type="text" placeholder="Filter todos">
-                <div id="todos"></div>
+                <label>
+                    <input type="checkbox" id="hide-completed"> Hide completed
+                </label>
 
+                <div id="notes"></div>
+
+                <form id="new-todo">
+                    <input type="text" placeholder="Something to do" name="text">
+                    <button>Add Todo</button>
+                </form>
             </div>
         </div>
     </section>
 
 
     <section class="container">
-        <h1>Todo App (basic functionality)</h1>
-        <h2>WORK IN PROGRESS</h2>
+        <h1>Live Text Filter</h1>
         <h3>HTML</h3>
-        <div class="row">
-            <div class="col-5">
 
-                <p>Basic HTML code.</p>
+        <div class="row">
+            <div class="col-4">
+                <p>HTML code</p>
             </div>
 
-            <div class="col-7">
-                <pre class="example"><span class="code-html">&lt;input id="new-todo-text" type="text" placeholder="Enter something to do"&gt;
-&lt;button id="add-todo"&gt;Add Todo&lt;/button&gt;
-&lt;input id="search-text" type="text" placeholder="Filter todos"&gt;
-&lt;div id="todos"&gt;&lt;/div&gt;</span></pre>
-</div>
+            <div class="col-8">
+                <pre class="example"><span class="code-html">&lt;input id="search-text" type="text" placeholder="search for text"&gt;
+&lt;div id="notes"&gt;&lt;/div&gt;
+
+&lt;label&gt;
+    &lt;input type="checkbox" id="hide-completed"&gt; Hide completed
+&lt;/label&gt;</span></pre></div>
         </div>
 
-<h3>JS</h3>
+        <h3>JS</h3>
         <div class="row">
-            <div class="col-5">
-
-                <p>This displays a text box to input a new todo (which currently does nothing).</p>
-                <p>A filter field displays allowing you to search the text.</p>
-                <p>When searched, an h2 tag shows how many todos are left in your list.</p>
-                <p>This checks the 'completed' boolean property.</p>
-                <p>(NOTE: Only some of the values have been marked as 'completed' in the code. This is why the 'todos left' values do not match the amount of todos shown.)</p>
+            <div class="col-4">
+                <p>This project displays text blocks.</p>
+                <p>As the user types into the input field, the text section is updated to display any remaining blocks that contain the input text.</p>
             </div>
-            <div class="col-7">
-                <pre class="example"><span class="code-js">
-
-    <span class="code-comment">//Loop through filtered todos</span>
-    filteredNotes.forEach(function(z) {
-        <span class="code-comment">//for each item returned, create a new p tag</span>
-        const p = document.createElement('p')
-        <span class="code-comment">//add text to p tag
-        //the text is the new filtered Array filteredTodos</span>
-        p.textContent = z.text
-        <span class="code-comment">//append it to the #todos tag</span>
-        document.querySelector('#todos').appendChild(p)
-    })
-}
-
-
-</pre></div>
-        </div>
-    </section>
-
-
-
-
-
-
-
-
-
-
-    <script>const notes = [{
+            <div class="col-8">
+                <pre class="example"><span class="code-js">const notes = [{
     title: 'my next trip',
     body: 'I would like to go to Spain'
 }, {
@@ -99,82 +80,161 @@
     body: 'Get a new seat'
 }]
 
-//Create Object to store the latest filter
-//this value changes over time
+<span class="code-comment">//<span class="standout">Create Object to store the latest filter</span>
+//this value changes over time</span>
 const filters = {
     searchText: ''
 }
 
-//Create function to display text
+<span class="code-comment">//<span class="standout">Create function to display text, then filter</span>
 //x and y correspond to the args used when calling the function
-//y is what is typed into the search box
+//y is what is typed into the search box</span>
 const renderNotes = function (x, y) {
-    //limit notes to just those that pass the filter
+    <span class="code-comment">//<span class="standout">limit notes to just those that pass the filter</span>
     //filter() creates a new array, but only with elements that pass
     //a specific test in the function
-    //z stores all the Objects in the Array
+    //z stores all the Objects in the Array</span>
     const filteredNotes = x.filter(function (z) {
-        //if the Object title includes the typed
-        //text from the search box, return the Object title
+        <span class="code-comment">//if the Object title includes the typed
+        //text from the search box, return the Object title</span>
         return z.title.toLowerCase().includes(y.searchText.toLowerCase())
     })
 
-
+    <span class="code-comment"><span class="standout">//create new array to store # of reamining todos</span>
     //Check the filteredNotes Array you just created
     //at first the param z is the full Array (since nothing has been typed)
     //When you start typing, the new Array is created and is assigned to filteredNotes
     //This function then filters that new Array and returns only todos that
-    //have a boolean value set to false into a new Object named incompleteTodos
+    //have a boolean value set to false into a new Object named incompleteTodos</span>
     const incompleteTodos = filteredNotes.filter(function(z) {
-      //return incomplete reamining todos
+      <span class="code-comment">//return incomplete reamining todos</span>
       return !z.completed
     })
 
-
-
-    //clear the div when new input is added
+    <span class="code-comment">//clear the div when new input is added
     //set #notes to empty, otherwise any input would just be added to the
-    //bottom of the list
+    //bottom of the list</span>
     document.querySelector('#notes').innerHTML = ''
 
-
-    //Create new h2
+    <span class="code-comment">//Create new h2</span>
     const summary = document.createElement('h2')
-    //add text to h2
+    <span class="code-comment">//add text to h2</span>
     summary.textContent = `You have ${incompleteTodos.length} todos left`
-    //append it to the #notes tag
+    <span class="code-comment">//append it to the #notes tag</span>
     document.querySelector('#notes').appendChild(summary)
 
-
+    <span class="code-comment"><span class="standout">//print to page</span>
     //loop over Array
     //The forEach() method calls a function once for each array element
     //i is the filtered Object (which at first is everything)
     //This causes the original and full Array to print by default
-    //As you type, only the Object with the typed text is displayed
+    //As you type, only the Object with the typed text is displayed</span>
     filteredNotes.forEach(function (i) {
-        //create new element
+        <span class="code-comment">//create new element</span>
         const noteEl = document.createElement('p')
-        //Set new element to the Object title property
+        <span class="code-comment">//Set new element to the Object title property</span>
         noteEl.textContent = i.title
-        //Print to page
+        <span class="code-comment">//Print to page</span>
         document.querySelector('#notes').appendChild(noteEl)
     })
 }
 
-//Run original function passing in 'notes' Array Object along with the 'filters' Object
+<span class="code-comment">//Run original function passing in 'notes' Array Object along with the 'filters' Object</span>
 renderNotes(notes, filters)
 
 document.querySelector('#search-text').addEventListener('input', function (e) {
-    //Set the 'filters' Object property of 'searchText' to user input
+    <span class="code-comment">//Set the 'filters' Object property of 'searchText' to user input</span>
     filters.searchText = e.target.value
-    //run function to show updated/remaining text
+    <span class="code-comment">//run function to show updated/remaining text</span>
     renderNotes(notes, filters)
 })
+</span></pre>
+            </div>
+        </div>
+
+    </section>
+
+
+
+
+
+
+
+
+    <script>
+        const notes = [{
+            title: 'my next trip',
+            body: 'I would like to go to Spain',
+            completed: true
+        }, {
+            title: 'Habbits to work on',
+            body: 'Exercise. Eating a bit better.',
+            completed: true
+        }, {
+            title: 'Office modification',
+            body: 'Get a new seat',
+            completed: false
+        }]
+
+        const filters = {
+            searchText: '',
+//Add property to confirm the checkbox state
+            hideCompleted: false
+        }
+
+        const renderNotes = function(x, y) {
+            const filteredNotes = x.filter(function(z) {
+                //return z.title.toLowerCase().includes(y.searchText.toLowerCase())
+//these 3 lines added
+                const searchTextMatch = z.title.toLowerCase().includes(filters.searchText.toLowerCase())
+                const hideCompletedMatch = !filters.hideCompleted || !z.completed
+
+                return searchTextMatch && hideCompletedMatch
+            })
+
+            const incompleteTodos = filteredNotes.filter(function(z) {
+                return !z.completed
+            })
+
+            document.querySelector('#notes').innerHTML = ''
+
+            const summary = document.createElement('h2')
+            summary.textContent = `You have ${incompleteTodos.length} todos left`
+            document.querySelector('#notes').appendChild(summary)
+
+            filteredNotes.forEach(function(i) {
+                const noteEl = document.createElement('p')
+                noteEl.textContent = i.title
+                document.querySelector('#notes').appendChild(noteEl)
+            })
+        }
+
+        renderNotes(notes, filters)
+
+        document.querySelector('#search-text').addEventListener('input', function(e) {
+            filters.searchText = e.target.value
+            renderNotes(notes, filters)
+        })
+
+        document.querySelector('#new-todo').addEventListener('submit', function (e) {
+            e.preventDefault()
+            notes.push({
+                title: e.target.elements.text.value,
+                completed: false
+            })
+            renderNotes(notes, filters)
+            e.target.elements.text.value = ''
+        })
+
+//new
+        document.querySelector('#hide-completed').addEventListener('change', function (e) {
+            filters.hideCompleted = e.target.checked
+            renderNotes(notes, filters)
+        })
     </script>
 
-
-    <script src="../../../_js/jquery.js"></script>
-    <script src="../../../_js/bootstrap.bundle.js"></script>
+    <script src="../_js/jquery.js"></script>
+    <script src="../_js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
